# ecsmos

./: Cargo.toml  flake.nix
src/: components.rs  consts.rs  main.rs  systems.rs  utils.rs
src/plugins/: mod.rs
src/plugins/flow_field_pathfinding/: mod.rs  models.rs  plugin.rs  resources.rs  systems.rs
src/plugins/simulation_area/: plugin.rs  systems.rs
